<resources>
    <string name="app_name">MusicDictionaryAndroid</string>
    <string name="app_title">Music Dictionary</string>

    <!-- タイトル -->
    <string name="title_navigation_home">ホーム</string>
    <string name="title_navigation_mypage">マイページ</string>
    <string name="title_sign_in">ログイン</string>
    <string name="title_sign_up">新規作成</string>
    <string name="title_home_category">カテゴリ検索</string>
    <string name="title_home_detail">詳細検索</string>
    <string name="title_home_soaring">急上昇</string>
    <string name="title_home_recommend">おすすめ</string>
    <string name="title_mypage_home">設定</string>
    <string name="title_mypage_user">アカウント情報</string>
    <string name="title_mypage_artist_list">アーティスト一覧</string>
    <string name="title_mypage_bookmark_artist_list">ブックマーク一覧</string>
    <string name="title_mypage_artist_add">アーティスト登録</string>
    <string name="title_mypage_artist_change">アーティスト編集</string>

    <!-- 認証系 -->
    <string name="sign_logout">ログアウト</string>
    <string name="sign_up_name_label">名前：</string>
    <string name="sign_up_email_label">Email：</string>
    <string name="sign_up_password_label">パスワード：</string>
    <string name="sign_up_password2_label">パスワード(確認)：</string>
    <string name="sign_up_gender_label">性別：</string>
    <string name="sign_up_area_label">地域</string>
    <string name="sign_up_birthday_label">生年月日</string>
    <string name="favorite_label">登録アーティスト数</string>

    <!-- アコーディオン -->
    <string name="page_open">▼</string>
    <string name="page_close">▲</string>

    <!-- 送信 -->
    <string name="submit_add">追加</string>
    <string name="submit_change">変更</string>
    <string name="submit_edit"><u>編集</u></string>
    <string name="submit_delete"><u>削除</u></string>
    <string name="submit_search">検索</string>
    <string name="result_re_search">再検索</string>

    <!-- カテゴリ -->
    <string name="category_title_artist_name">アーティスト名</string>
    <string name="category_title_gender">性別</string>
    <string name="category_title_length">長さ</string>
    <string name="category_title_voice">高さ</string>
    <string name="category_title_lyric">歌詞</string>
    <string name="category_title_genre1">ジャンル１</string>
    <string name="category_title_genre2">ジャンル２</string>
    <string name="category_gender_men">男</string>
    <string name="category_gender_women">女</string>
    <string name="category_length_short">短い</string>
    <string name="category_length_long">長い</string>
    <string name="category_voice_low">低い</string>
    <string name="category_voice_height">高い</string>
    <string name="category_lyric_english">英語</string>
    <string name="category_lyric_japanese">日本語</string>
    <string name="category_search_sort1">絞り込み項目１</string>
    <string name="category_search_sort2">絞り込み項目２</string>
    <string name="category_search_sort3">絞り込み項目３</string>
    <string name="category_search_sort4">絞り込み項目４</string>

    <!-- カテゴリ数値文字列表記 -->
    <string name="category_value_no_select">未選択</string>
    <string name="category_value_length_1">曲が短い</string>
    <string name="category_value_length_2">曲がやや短め</string>
    <string name="category_value_length_3">中間</string>
    <string name="category_value_length_4">曲がやや長め</string>
    <string name="category_value_length_5">曲が長い</string>
    <string name="category_value_voice_1">声が低い</string>
    <string name="category_value_voice_2">やや声が低い</string>
    <string name="category_value_voice_3">中間の声</string>
    <string name="category_value_voice_4">やや声が高い</string>
    <string name="category_value_voice_5">声が高い</string>
    <string name="category_value_lyric_1">外国語が多い</string>
    <string name="category_value_lyric_2">外国語がやや多い</string>
    <string name="category_value_lyric_3">外国語と日本語が半々</string>
    <string name="category_value_lyric_4">少し外国語がある</string>
    <string name="category_value_lyric_5">日本語が多い</string>

    <!-- バリデート -->
    <string name="validate_home_button1">1件以上登録してください</string>
    <string name="validate_home_button2">3件以上登録してください</string>
    <string name="validate_home_button3">5件以上登録してください</string>
    <string name="validate_home_button4">8件以上登録してください</string>
    <string name="validate_home_button5">10件以上登録してください</string>
    <string name="validate_sign_password1">パスワード（最低６文字）</string>
    <string name="validate_sign_password2">パスワード再入力（最低６文字）</string>
    <string name="validate_sign_email">メールアドレス（最低６文字）</string>
    <string name="validate_sign_name">名前（最低６文字）</string>

    <!-- 円グラフタイトル -->
    <string name="pie_title_generation">年齢層</string>
    <string name="pie_title_gender">男女比率</string>
    <!-- 円グラフ要素 -->
    <string name="pie_value_gender_man">男性</string>
    <string name="pie_value_gender_woman">女性</string>
    <string name="pie_value_generation_over10">10代</string>
    <string name="pie_value_generation_over20">20代</string>
    <string name="pie_value_generation_over30">30代</string>
    <string name="pie_value_generation_over40">40代</string>
    <string name="pie_value_generation_over50">50代</string>
    <string name="pie_value_generation_over60">60代</string>

    <!-- 検索条件ラベル -->
    <string name="search_label_title">検索条件</string>
    <string name="search_label_name">検索ワード：</string>
    <string name="search_label_gender">性別：</string>
    <string name="search_label_voice">声の高さ：</string>
    <string name="search_label_length">曲の長さ：</string>
    <string name="search_label_lyrics">歌詞：</string>
    <string name="search_label_genre1">ジャンル１：</string>
    <string name="search_label_genre2">ジャンル２：</string>


    <!-- 成功文言 -->
    <string name="success_login">同期しました</string>

    <!-- エラー文言 -->
    <string name="error_email_password">EmailかPasswordが違います</string>
    <string name="error_network">通信環境の良いところでお試しください</string>
    <string name="error_no_match_artist">該当するアーティストはまだ登録されていません</string>

</resources>