<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.example.musicdictionaryandroid.ui.login.SignUpViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/new_user_text_view"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sign_up_email_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_color_light_primary" />

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/validate_sign_email"
                android:inputType="text"
                android:text="@={viewModel.emailText}" />

            <TextView
                android:id="@+id/password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sign_up_password_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_color_light_primary" />

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/validate_sign_password"
                android:inputType="textPassword"
                android:text="@={viewModel.passwordText}" />

            <TextView
                android:id="@+id/name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sign_up_name_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_color_light_primary" />

            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/validate_sign_name"
                android:inputType="text"
                android:text="@={viewModel.nameText}" />

            <TextView
                android:id="@+id/gender_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sign_up_gender_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_color_light_primary" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <RadioGroup
                    android:id="@+id/gender_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category_gender_men"
                        android:textColor="@color/text_color_light_secondary"
                        android:textSize="24dp" />

                    <RadioButton
                        android:id="@+id/gender1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> viewModel.checkedChangeGender(1)}" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category_gender_women"
                        android:textColor="@color/text_color_light_secondary"
                        android:textSize="24dp" />
                    <RadioButton
                        android:id="@+id/gender2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> viewModel.checkedChangeGender(2)}" />
                </RadioGroup>


            </LinearLayout>

            <TextView
                android:id="@+id/area_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sign_up_area_label"
                android:textColor="@color/text_color_light_primary"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/area_spinner"
                android:layout_alignParentTop="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/area_spinner_list"
                android:selectedItemPosition="@={viewModel.areaSelectedPosition}"
                />

            <TextView
                android:id="@+id/birthday_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sign_up_birthday_label"
                android:textColor="@color/text_color_light_primary"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/birthday_spinner"
                android:layout_alignParentTop="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/birthday_spinner_list"
                android:selectedItemPosition="@={viewModel.birthdaySelectedPosition}"
                />

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:stateListAnimator="@drawable/button_state_list_anim_material"
                android:elevation="6dp"
                android:background="@drawable/accent_button_selector"
                android:enabled="@{viewModel.isEnableSubmitButton}"
                android:onClick="@{() -> viewModel.signUp()}"
                android:text="@string/title_sign_up"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textStyle="bold" />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
