<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.example.musicdictionaryandroid.ui.home.HomeViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/category1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_title"
                android:textColor="@android:color/white"
                android:textSize="36sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout2"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:background="@drawable/home_search_box"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/category1"
                app:layout_constraintVertical_bias="0.0">

                <EditText
                    android:id="@+id/search_bar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="3dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="検索ワード"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.searchText}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/submit"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:clickable="@{viewModel.isEnableSearchBar}"/>

                <ImageButton
                    android:id="@+id/submit"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:background="@drawable/home_search_button_selector"
                    android:src="@mipmap/baseline_search_black_36"
                    android:tint="@color/icon_active_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:clickable="@{viewModel.isEnableSearchBar}"
                    android:enabled="@{viewModel.isEnableSubmitButton}"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/submit_button_enable"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:text="@string/validate_home_button1"
                android:textColor="@color/text_color_error"
                android:textStyle="bold"
                android:background="@drawable/home_search_box_disabled"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/category1"
                app:layout_constraintVertical_bias="0.0"
                android:visibility="@{viewModel.isEnableSearchBar ?  View.INVISIBLE : View.VISIBLE}"/>

            <Button
                android:id="@+id/category_button"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="4dp"
                android:transitionName="start_category_view_transition"
                android:background="@drawable/home_button_selector"
                android:text="@string/title_home_category"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:enabled="@{viewModel.isEnableCategoryButton}"
                android:clickable="@{viewModel.isEnableCategoryButton}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/detail_button"
                app:layout_constraintTop_toBottomOf="@+id/submit_button_enable"
                app:layout_constraintHorizontal_chainStyle="spread"/>

            <Button
                android:id="@+id/detail_button"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:transitionName="start_detail_view_transition"
                android:background="@drawable/home_button_selector"
                android:text="@string/title_home_detail"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:enabled="@{viewModel.isEnableDetailsButton}"
                android:clickable="@{viewModel.isEnableDetailsButton}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/category_button"
                app:layout_constraintTop_toTopOf="@+id/category_button"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/validate_home_button2"
                android:textColor="@color/text_color_error"
                android:textSize="@dimen/home_button_validate"
                android:textStyle="bold"
                android:scrollbarSize="@dimen/home_search_button_validate"
                android:elevation="6dp"
                android:visibility="@{!viewModel.isEnableCategoryButton ? View.VISIBLE : View.GONE}"
                app:layout_constraintStart_toStartOf="@+id/category_button"
                app:layout_constraintEnd_toEndOf="@id/category_button"
                app:layout_constraintBottom_toBottomOf="@id/category_button"
                app:layout_constraintTop_toTopOf="@+id/category_button"
                app:layout_constraintVertical_bias="0.73" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/validate_home_button3"
                android:textColor="@color/text_color_error"
                android:textSize="@dimen/home_button_validate"
                android:textStyle="bold"
                android:elevation="6dp"
                android:visibility="@{!viewModel.isEnableDetailsButton ? View.VISIBLE : View.GONE}"
                app:layout_constraintStart_toStartOf="@+id/detail_button"
                app:layout_constraintEnd_toEndOf="@id/detail_button"
                app:layout_constraintBottom_toBottomOf="@id/detail_button"
                app:layout_constraintTop_toTopOf="@+id/detail_button"
                app:layout_constraintVertical_bias="0.73" />

            <Button
                android:id="@+id/soaring_button"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/home_button_selector"
                android:text="@string/title_home_soaring"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:enabled="@{viewModel.isEnableSoaringButton}"
                android:clickable="@{viewModel.isEnableSoaringButton}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/recommend_button"
                app:layout_constraintTop_toBottomOf="@+id/category_button"
                app:layout_constraintHorizontal_chainStyle="spread"/>

            <Button
                android:id="@+id/recommend_button"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/home_button_selector"
                android:text="@string/title_home_recommend"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:enabled="@{viewModel.isEnableRecommendButton}"
                android:clickable="@{viewModel.isEnableRecommendButton}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/soaring_button"
                app:layout_constraintTop_toTopOf="@+id/soaring_button"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/validate_home_button4"
                android:textColor="@color/text_color_error"
                android:textSize="@dimen/home_button_validate"
                android:textStyle="bold"
                android:elevation="6dp"
                android:visibility="@{!viewModel.isEnableSoaringButton ? View.VISIBLE : View.GONE}"
                app:layout_constraintStart_toStartOf="@+id/soaring_button"
                app:layout_constraintEnd_toEndOf="@id/soaring_button"
                app:layout_constraintBottom_toBottomOf="@id/soaring_button"
                app:layout_constraintTop_toTopOf="@+id/soaring_button"
                app:layout_constraintVertical_bias="0.73" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/validate_home_button5"
                android:textColor="@color/text_color_error"
                android:textSize="@dimen/home_button_validate"
                android:textStyle="bold"
                android:elevation="6dp"
                android:visibility="@{!viewModel.isEnableRecommendButton ? View.VISIBLE : View.GONE}"
                app:layout_constraintStart_toStartOf="@+id/recommend_button"
                app:layout_constraintEnd_toEndOf="@id/recommend_button"
                app:layout_constraintBottom_toBottomOf="@id/recommend_button"
                app:layout_constraintTop_toTopOf="@+id/recommend_button"
                app:layout_constraintVertical_bias="0.73" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>